Anpassungen für contao5 Kompatibilitä

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-composer.lock
-vendor
+# Jetbrains
+/.idea/*
+
+# tools
+/vendor/
+/tools/*/vendor
+/composer.lock
+/.php-cs-fixer.cache
+/tools/phpunit/.phpunit.result.cache
