--- a/composer.json
+++ b/composer.json
@@ -1,34 +1,33 @@
 {
-  "name": "danielgausi/contao-calendareditor-bundle",
+  "name": "diversworld/contao-calendar-editor",
   "description": "Contao Extension to create and edit calendar events in the frontend.",
-  "keywords": ["contao", 
-			   "calendar", 
-			   "calendar_editor", 
-			   "calendar editor", 
+  "keywords": ["contao",
+			   "calendar",
+			   "calendar_editor",
+			   "calendar editor",
 			   "calendar frontend",
-			   "events", "frontend", 
+			   "events", "frontend",
 			   "events frontend"],
   "type": "contao-bundle",
-  "homepage": "https://github.com/DanielGausi/Contao-CalendarEditor",
+  "homepage": "https://github.com/diversworld/contao-calendar-editor",
   "license": "LGPL-3.0-or-later",
-	
+
 	"require": {
 		"php": "^8.2",
-		"contao/core-bundle": "~4.13" ,
-		"contao/calendar-bundle": "~4.13",
-		"menatwork/contao-multicolumnwizard-bundle": "^3.0",
-		"hofff/contao-calendarfield": "^4.0"
+		"contao/core-bundle": "~5.3" ,
+		"contao/calendar-bundle": "~5.3",
+		"menatwork/contao-multicolumnwizard-bundle": "^3.0"
 	},
 	"autoload": {
 		"psr-4": {
 			"DanielGausi\\CalendarEditorBundle\\": "src/"
-		},				
+		},
         "classmap": [
             "src/Resources/contao/"
 		],
 		"exclude-from-classmap": [
-            "src/Resources/contao/config/",			
-            "src/Resources/contao/dca/",			
+            "src/Resources/contao/config/",
+            "src/Resources/contao/dca/",
             "src/Resources/contao/languages/",
             "src/Resources/contao/templates/"
 		]
@@ -42,5 +41,6 @@
       "php-http/discovery": true,
       "contao-community-alliance/composer-plugin": true
     }
-  }
+  },
+  "version": "5.0"
 }
