Contao5 Anpassungen der Struktur und codeteile für kompatibilität mit contao5

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,7 +27,7 @@ services:
 
   DanielGausi\CalendarEditorBundle\Hooks\ListAllEventsHook:
     arguments:
-      $checkAuthService: '@DanielGausi\CalendarEditorBundle\Services\CheckAuthService'
+      $checkAuthService: '@DanielGausi\CalendarEditorBundle\Service\CheckAuthService'
       $user: '@security.token_storage'
 
   DanielGausi\CalendarEditorBundle\Services\CheckAuthService:
