--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
   "homepage": "https://github.com/diversworld/contao-calendar-editor",
   "license": "LGPL-3.0-or-later",
 
-	"require": {
-		"php": "^8.2",
-		"contao/core-bundle": "~5.3" ,
-		"contao/calendar-bundle": "~5.3",
-		"menatwork/contao-multicolumnwizard-bundle": "^3.0"
-	},
+    "require": {
+      "php": "^8.1",
+      "contao/core-bundle": "~5.3" ,
+      "contao/calendar-bundle": "^5.3",
+      "menatwork/contao-multicolumnwizard-bundle": "^3.0"
+    },
 	"autoload": {
 		"psr-4": {
 			"DanielGausi\\CalendarEditorBundle\\": "src/"
@@ -42,5 +42,5 @@
       "contao-community-alliance/composer-plugin": true
     }
   },
-  "version": "5.0"
+  "version": "5.0.0"
 }
