--- a/composer.json
+++ b/composer.json
@@ -23,13 +23,13 @@
 			"Diversworld\\CalendarEditorBundle\\": "src/"
 		},
         "classmap": [
-            "src/Resources/contao/"
+            "src/contao/"
 		],
 		"exclude-from-classmap": [
-            "src/Resources/contao/config/",
-            "src/Resources/contao/dca/",
-            "src/Resources/contao/languages/",
-            "src/Resources/contao/templates/"
+            "contao/config/",
+            "contao/dca/",
+            "contao/languages/",
+            "contao/templates/"
 		]
   	},
 	"extra":{
