Refactor calendar editor and enhance code quality tools.
Reorganized various files and directories while renaming templates for improved structure. Added PHPStan, PHPUnit, and ECS configuration to enforce coding standards and ensure maintainability. Introduced additional logging in the event editor module for debugging purposes.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,6 +13,10 @@ services:
       calls:
         - [ setContainer, [ '@service_container' ] ]
 
+  Diversworld\CalendarEditorBundle\:
+    resource: ../src/
+    exclude: ../src/{DependencyInjection,Model}
+
   Diversworld\CalendarEditorBundle\Controller\Module\ModuleCalendarEdit:
     calls:
       - [ setCheckAuthService, [ '@Diversworld\CalendarEditorBundle\Services\CheckAuthService' ] ]
