Update dependencies and clean up unused code
Updated `composer.json` to include new keywords and bumped the version to 5.0.8. Removed unused logger-related code and unused imports in `ModuleCalendarEdit`. Added a missing `ContaoFramework` import in `ModuleEventEditor` for framework consistency.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "diversworld/contao-calendar-editor",
   "description": "Contao Extension to create and edit calendar events in the frontend.",
-  "keywords": ["contao", "events", "frontend"],
+  "keywords": ["contao", "events", "frontend","calendar","editor"],
   "type": "contao-bundle",
   "license": "LGPL-3.0+",
   "authors": [
@@ -45,5 +45,5 @@
     "unit-tests": "@php tools/phpunit/vendor/bin/phpunit -c tools/phpunit/phpunit.xml.dist",
     "phpstan": "@php tools/phpstan/vendor/bin/phpstan analyse src tests"
   },
-  "version": "5.0.7"
+  "version": "5.0.8"
 }
