Add editor-specific links and logging to calendar events
Introduced functionality to generate editor-specific links for calendar events. Enhanced logging to provide better debugging information and ensure proper error handling for missing configurations. Updated the version number in composer.json to reflect these changes.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "diversworld/contao-calendar-editor",
   "description": "Contao Extension to create and edit calendar events in the frontend.",
-  "keywords": ["contao", "events", "frontend"],
+  "keywords": ["contao", "events", "frontend","calendar","editor"],
   "type": "contao-bundle",
   "license": "LGPL-3.0+",
   "authors": [
