Refactor templates and DCA for improved consistency.
Normalize template formatting, remove unused imports, and refactor DCA definitions for better readability and code maintainability. Adjusted hidden fields and updated the CSS handling logic to align with coding standards.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,7 +15,6 @@ services:
 
   caledit.service.auth:
     class: Diversworld\CalendarEditorBundle\Services\CheckAuthService
-    arguments: []
     autowire: true
     autoconfigure: true
     public: true
@@ -23,10 +22,6 @@ services:
   Diversworld\CalendarEditorBundle\:
     resource: ../src/
     exclude: ../src/{DependencyInjection,Model}
-
-  Diversworld\CalendarEditorBundle\Controller\Module\ModuleCalendarEdit:
-    calls:
-      - [ setCheckAuthService, [ '@Diversworld\CalendarEditorBundle\Services\CheckAuthService' ] ]
 
   Diversworld\CalendarEditorBundle\Controller\Module\ModuleEventEditor:
     arguments:
@@ -38,7 +33,7 @@ services:
 
   Diversworld\CalendarEditorBundle\Hooks\ListAllEventsHook:
     arguments:
-      $checkAuthService: '@Diversworld\CalendarEditorBundle\Services\CheckAuthService'
+      $checkAuthService: '@caledit.service.auth'
       $user: '@security.token_storage'
 
   monolog.logger.contao.general:
