Update service configuration and fix database field definitions
Added and adjusted service definitions in `services.yaml` for improved compatibility and functionality. Updated SQL field types across multiple DCA files for consistency and removed unnecessary code from `calendar_eventeditor`. Improved method signature in `CheckAuthService`.

--- a/config/services(0).yaml
+++ b/config/services(0).yaml
@@ -9,6 +9,10 @@ services:
       calls:
         - [ setFramework, [ '@contao.framework' ] ]
 
+    Symfony\Component\DependencyInjection\ContainerAwareInterface:
+      calls:
+        - [ setContainer, [ '@service_container' ] ]
+
   caledit.service.auth:
     class: Diversworld\CalendarEditorBundle\Services\CheckAuthService
     autowire: true
